--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -11,8 +11,8 @@ jobs:
     name: generate-github-profile-3d-contrib
     steps:
       - uses: actions/checkout@v2
-      - uses: yoshi389111/github-profile-3d-contrib@0.6.0
-      - with:
+      - uses: yoshi389111/github-profile-3d-contrib@0.6.1
+        with:
           user_name: SuKyeong2002
           svg_path: ./profile-3d-contrib/profile-3d-full.svg
           animation: true
@@ -20,7 +20,6 @@ jobs:
           color: "rainbow"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          USERNAME: ${{ github.repository_owner }}
       - name: Commit & Push
         run: |
           git config user.name "SuKyeong2002"
