--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -1,7 +1,7 @@
 name: GitHub-Profile-3D-Contrib
 
 on:
-  schedule: # 03:00 KST == 18:00 UTC
+  schedule: # 매일 오전 3시 KST
     - cron: "0 18 * * *"
   workflow_dispatch:
 
@@ -11,6 +11,7 @@ jobs:
     name: generate-github-profile-3d-contrib
     steps:
       - uses: actions/checkout@v2
+
       - uses: yoshi389111/github-profile-3d-contrib@0.6.1
         with:
           user_name: SuKyeong2002
@@ -20,6 +21,7 @@ jobs:
           color: "rainbow"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Commit & Push
         run: |
           git config user.name "SuKyeong2002"
