--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -1,8 +1,8 @@
 name: GitHub-Profile-3D-Contrib
 
 on:
-  schedule: # 매일 오전 3시 KST
-    - cron: "0 18 * * *"
+  schedule:
+    - cron: "0 18 * * *"  # 매일 03:00 KST
   workflow_dispatch:
 
 jobs:
@@ -12,7 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: yoshi389111/github-profile-3d-contrib@0.6.1
+      - name: Generate 3D Graph
+        uses: yoshi389111/github-profile-3d-contrib@0.6.0
         with:
           user_name: SuKyeong2002
           svg_path: ./profile-3d-contrib/profile-3d-full.svg
