--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -1,8 +1,8 @@
 name: GitHub-Profile-3D-Contrib
 
 on:
-  schedule:
-    - cron: "0 18 * * *"  # 매일 03:00 KST
+  schedule: # 03:00 KST == 18:00 UTC
+    - cron: "0 18 * * *"
   workflow_dispatch:
 
 jobs:
@@ -10,23 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     name: generate-github-profile-3d-contrib
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Generate 3D Graph
-        uses: yoshi389111/github-profile-3d-contrib@0.6.0
-        with:
-          user_name: SuKyeong2002
-          svg_path: ./profile-3d-contrib/profile-3d-full.svg
-          animation: true
-          chart: true
-          color: "rainbow"
+      - uses: actions/checkout@v4
+      - uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+          USERNAME: ${{ github.repository_owner }}
       - name: Commit & Push
         run: |
-          git config user.name "SuKyeong2002"
-          git config user.email "osukyeong0109@gmail.com"
+          git config user.name SuKyeong2002
+          git config user.email osukyeong0109@gmail.com
           git add -A .
           git commit -m "generated"
-          git push
+          git push'
