--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -21,4 +21,4 @@ jobs:
           git config user.email "osukyeong0109@gmail.com"
           git add -A .
           git commit -m "generated"
-          git push'
+          git push
